--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.1",
+    "react-slick": "^0.28.0",
+    "react-transition-group": "^4.4.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
