--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.1",
     "react-slick": "^0.28.0",
+    "react-snap": "^1.23.0",
     "react-transition-group": "^4.4.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.0"
@@ -21,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postbuild": "react-snap"
   },
   "eslintConfig": {
     "extends": [
